[PATCH] Fixed overflow issue on 'author name' text box container

--- a/web/src/css/home-page.css
+++ b/web/src/css/home-page.css
@@ -183,12 +183,23 @@ text-transform: uppercase;
 
 .book-author {
     width: 40rem;
-    height: 2.5rem;
+    max-height: 5rem;
+    overflow: scroll;
     background-color: rgba(0, 255, 157, 0);
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+.book-author p {
+    text-align: center;
+}
+
+
+.book-author::-webkit-scrollbar {
+    display: none;
+  }
+
 
 .book-author p {
     font-size: 2rem;
